--- a/CustomUI.csproj
+++ b/CustomUI.csproj
@@ -41,6 +41,7 @@
     </Reference>
     <Reference Include="Assembly-CSharp" />
     <Reference Include="IllusionPlugin" />
+    <Reference Include="Polyglot.Scripts" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
