--- a/CustomUI.csproj
+++ b/CustomUI.csproj
@@ -5,10 +5,10 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{205F177C-3995-46B4-854B-9EED576B706D}</ProjectGuid>
+    <ProjectGuid>{02C86DA6-CD46-4E7D-8B76-F55A50080F61}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BeatSaberCustomUI</RootNamespace>
+    <RootNamespace>CustomUI</RootNamespace>
     <AssemblyName>BeatSaberCustomUI</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
