--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,6 @@
   "features": [],
   "gameVersion": "0.13.2",
   "id": null,
-  "name": "CustomUI",
+  "name": "BeatSaberCustomUI",
   "version": "1.4.2"
 }
