--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 ﻿{
   "$schema": "https://raw.githubusercontent.com/nike4613/ModSaber-MetadataFileSchema/master/Schema.json",
-  "author": "Auros",
+  "author": "",
   "description": "",
   "features": [],
   "gameVersion": "0.13.2",
-  "id": null,
+  "id": "custom-ui",
   "name": "BeatSaberCustomUI",
   "version": "1.4.2"
 }
