fix manifest id

--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "",
   "features": [],
   "gameVersion": "0.13.2",
-  "id": "custom-ui",
+  "id": "CustomUI",
   "name": "BeatSaberCustomUI",
   "version": "1.5.3"
 }
