Updated manifest Retooled to use BuildTools (now this can be build on AppVeyor or other similar sites!)

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 ﻿{
-  "$schema": "https://raw.githubusercontent.com/nike4613/ModSaber-MetadataFileSchema/master/Schema.json",
-  "author": "",
-  "description": "",
+  "$schema": "https://raw.githubusercontent.com/nike4613/BSIPA-MetadataFileSchema/master/Schema.json",
+  "author": "Various Modders",
+  "description": "A library to provide easier access to Beat Saber's UI system.\n\nThanks to <b>brian</b>, <b>Shoko84</b>, <b>monkeymanboy</b>, <b>Rolo</b>, <b>andruzzzhka</b>, <b>PlasmaPower</b>, and <b>Megalon</b>.",
   "features": [],
   "gameVersion": "0.13.2",
   "id": "CustomUI",
-  "name": "BeatSaberCustomUI",
+  "name": "Beat Saber Custom UI",
   "version": "1.5.4"
 }
