--- a/CustomUI.csproj
+++ b/CustomUI.csproj
@@ -137,6 +137,7 @@
     <Compile Include="UIElements\ColorPickerPreviewClickable.cs" />
     <Compile Include="UIElements\CustomSlider.cs" />
     <Compile Include="UIElements\FavoriteColorsViewController.cs" />
+    <Compile Include="Utilities\BSEvents.cs" />
     <Compile Include="Utilities\ReflectionUtil.cs" />
     <Compile Include="Utilities\Utilities.cs" />
   </ItemGroup>
@@ -165,4 +166,9 @@
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties manifest_1json__JsonSchema="" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
