--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,12 @@
 ﻿{
   "$schema": "https://raw.githubusercontent.com/nike4613/BSIPA-MetadataFileSchema/master/Schema.json",
   "author": "Various Modders",
-  "description": "A library to provide easier access to Beat Saber's UI system.\n\nThanks to <b>brian</b>, <b>Shoko84</b>, <b>Moon</b>, <b>monkeymanboy</b>, <b>Rolo</b>, <b>andruzzzhka</b>, <b>PlasmaPower</b>, and <b>Megalon</b>.",
+  "description": "A library to provide easier access to Beat Saber's UI system.\n\nThanks to **brian**, **Kyle 1413**, **DaNike**, **Shoko84**, **Moon**, **monkeymanboy**, **Rolo**, **andruzzzhka**, **PlasmaPower**, and **Megalon**.",
   "features": [],
-  "gameVersion": "0.13.2",
+  "gameVersion": "0.13.3",
   "id": "CustomUI",
   "name": "Custom UI",
-  "version": "1.5.7",
+  "version": "1.5.8",
   "dependsOn": {
-    "Harmony": "^1.2.1"
   }
 }
